# lil-rusty

./: README.md  Readme.md
checkit/: Cargo.toml  Dockerfile
checkit/src/: main.rs
lil-fractal/: Cargo.toml
lil-fractal/src/: main.rs
lil-hello/: Cargo.toml  Dockerfile  README.md
lil-hello/src/: main.rs
lil-servy/: Cargo.toml
lil-servy/src/: main.rs
lil-testy/: Cargo.toml  README.md
lil-testy/src/: lilmath.rs  main.rs
