[package]
name = "checkit"
version = "0.1.0"
authors = ["Bart Carroll <bart.a.carroll@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.2.1"
reqwest = { version = "0.10.1", features=["json", "blocking"]  }
